2003-05-29  Chris Blumenberg  <cblu@apple.com>

	Fixed: 3151216 - Safari crashes on Drag&Drop if plugin dialog is open
	
        Reviewed by rjw.

        * Misc.subproj/WebNSViewExtras.m:
        (-[NSView _web_dragOperationForDraggingInfo:]): return NSDragOperationNone is the app has a modal window so the current page can't be changed with a drag
        * WebView.subproj/WebView.m:
        (-[WebView draggingEntered:]): return _web_dragOperationForDraggingInfo

2003-05-29  Chris Blumenberg  <cblu@apple.com>

	Fixed: 3273109 - leak from functionPointerForTVector in -[WebNetscapePluginPackage load]

        * Plugins.subproj/WebNetscapePluginPackage.m:
        (-[WebNetscapePluginPackage load]): free the main function after using it

2003-05-29  Richard Williamson   <rjw@apple.com>
	
	Fixed 3273115.  Always use pixel dimensions,
	not absolute dimensions.

        Reviewed by Ken.

        * WebCoreSupport.subproj/WebImageRenderer.m:
        (-[WebImageRenderer incrementalLoadWithBytes:length:complete:]):

2003-05-29  Richard Williamson   <rjw@apple.com>

	Fix 3272292.  Ensure that loadStatus is always
	initialized to NSImageRepLoadStatusUnknownType.

        Reviewed by Chris.

        * WebCoreSupport.subproj/WebImageRenderer.m:
        (-[WebImageRenderer initWithMIMEType:]):
        (-[WebImageRenderer initWithData:MIMEType:]):
        (-[WebImageRenderer initWithContentsOfFile:]):

2003-05-28  Ken Kocienda  <kocienda@apple.com>

        Reviewed by Richard

	Fix for this bug:

	Radar 3260323 (Some links at nike.com cause assertion failure 
	(connectionDidFinishLoading sent after cancel))

	Added a flag which is set when a load is cancelled. This flag prevents
	bad behvior when loads that finish cause the load itself to be
	cancelled (which could happen with a javascript that changes the
	window location). This is used to prevent both the body of
	cancelWithError: and the body of connectionDidFinishLoading: running
	for a single delegate. Cancelling wins.
